Completely hide repeat component's disabled remove icon, fix shifted label color on focus

--- a/frontend/src/material-fields.override.scss
+++ b/frontend/src/material-fields.override.scss
@@ -63,6 +63,7 @@
   padding-right: 12px;
 }
 
+.mat-form-field-label,
 .mat-form-field-required-marker {
   color: $ige-comment-color !important;
 }
